// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NCC should matchSnapshot when dark theme 1`] = `
<div
  className="baseNPC dark"
>
  <h1
    className="baseNPCHeader"
  >
    Type the content of your comment
  </h1>
  <form
    className="baseNPCForm dark"
  >
    <label
      className="baseNPCLabel dark"
    >
      Content:
    </label>
    <textarea
      className="baseNPCInput dark"
      onChange={[MockFunction]}
    />
    <button
      className="baseNPCButton dark"
      type="submit"
    >
      Create Post!
    </button>
  </form>
</div>
`;

exports[`NCC should matchSnapshot when light theme 1`] = `
<div
  className="baseNPC null"
>
  <h1
    className="baseNPCHeader"
  >
    Type the content of your comment
  </h1>
  <form
    className="baseNPCForm null"
  >
    <label
      className="baseNPCLabel null"
    >
      Content:
    </label>
    <textarea
      className="baseNPCInput null"
      onChange={[MockFunction]}
    />
    <button
      className="baseNPCButton null"
      type="submit"
    >
      Create Post!
    </button>
  </form>
</div>
`;
